# barnes_hut_simulation

./: CMakeLists.txt  README.md
include/: barnes_hut.h  body.h  fps.h  game_engine.h  json_parser.h  ostream_operator.h  user_interface.h
initial_conditions/: central_sun.json  sun_system.json
src/: barnes_hut.cpp  body.cpp  fps.cpp  game_engine.cpp  json_parser.cpp  main.cpp  ostream_operator.cpp  user_interface.cpp
start_conditions/: sun_system.json
